<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    tools:context=".ui.fragments.addandupdategroupfragment.FragmentGroupManager">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_6sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/group_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_shape"
        android:hint="@string/enter_group_name"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGroupName" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sms_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:paddingTop="@dimen/_8sdp"
        android:text="@string/sms_source_"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGroupName" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_sms_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_shape"
        android:hint="@string/enter_source_number"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sms_source" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSlackChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:paddingTop="@dimen/_8sdp"
        android:text="@string/your_slack_channel"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sms_source" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spChannel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/slack_channel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSlackChannel">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/spText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52sdp"
        android:elevation="@dimen/_10sdp"
        android:text="@string/create_new_group"
        android:textColor="@color/background"
        app:backgroundTint="@color/black"
        app:cornerRadius="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>